Update UI. Sidebar updated. Single day Table updated. Lesson updated. Created screen optimization. New scrollbar. Overflow fixed. Removed change day button from main.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,16 +1,52 @@
 html,body, #app{
-    max-height: 100vh;
+    height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
-    color: #333;
     background-color: #f5f5f5;
 }
 
 #app{
     display: grid;
-    grid-template-rows: 12% 88%;
+    height: 100%;
+    gap: 5px;
 }
 
+@media screen and (min-width:590px) {
+    #app {
+    grid-template-rows: 1fr 12fr;
+    }
+}
+@media screen and (max-width:590px) {
+    #app {
+overflow-y: auto;
+        
+    }
+}
+
+
+hr {
+    border-color: #21005D;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #4F378B;
+    border-radius: 10px;
+    transition: background .2s ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #21005D;
+}
